app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

header {
  width: 100%;
  border-bottom: 1px solid rgb(79,	193,	157)	;
  background: #5bc5a7;
  box-shadow: 0 0 3px black;
  color: #000;
  height: 50px;
  display: flex;
  justify-content: center;
}

h1 {
  color: white;
  font-family: sans-serif;
  font-size: 25px;
  padding: 8px;
  letter-spacing: 8px;
}

.signup-button, .homepage-get-started-button, .signup-submit-button {
  border: 1px solid rgb(226,	85,	44);
  border-bottom: 1px solid rgb(189,	71, 37);
  border-radius: 4px;
  color: white;
  text-shadow: 0 -1px 0 rgb(198, 44,3);
  /* box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2); */
  background-color: rgb(252,	95 ,49);
  box-shadow: inset 0px 1px 0px rgb(253,	127,	90), 0 1px 2px 1px rgba(0,0,0,0.2);
}




.login-button {
  border: 1px solid rgb(86,	180,	150);
  border-bottom: 1px solid rgb(72,	150,	125);
  border-radius: 4px;
  color: white;
  box-shadow: inset 0px 1px 0px rgb(128,	211,	185	), 0 1px 2px 1px rgba(0,0,0,0.2);
  text-shadow: 0 -1px 0 rgb(55, 139, 112);
  padding: 5px 10px;
  font-size: 14px;
  background: #5bc5a7;
}

.login-button:hover, .login-submit-button:hover {
  background-color: rgb(79, 193, 157);

}

.login-button:active, .login-submit-button:active {
  background-color: rgb(79, 193, 157);
  box-shadow: inset 0px 0px 5px rgb(71, 173, 143);

}

.signup-button:hover{
  background-color: rgb(252,	74,	25);

}

.signup-button:active, .signup-submit-button:active, .homepage-get-started-button:active{
  box-shadow: inset 0px 0px 5px rgb(226,	85,	44);
  background-color: rgb(252,	74,	25);

}



.signup-button {
  /* border: 5px groove rgb(122, 162, 108)ck; */
  /* border-radius: 4px; */
  /* text-shadow: 0 -1px 0 rgb(198, 44,3); */
  padding: 5px 10px;
  font-size: 14px;
  /* box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2); */
  /* background-color: rgb(252,	95 ,49); */
}

.nav-bar-box {
  width: 960px;
  height: 48px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-link {
  align-items: center;
  height: 50px;
  width: auto;
  display: flex;
  text-decoration: none;
}

#root {
  margin: none;
}

.IOU-header {
  color: white;
  font-size: 22px;
  font-family: Georgia, serif;
  text-decoration: bold;
  letter-spacing: 5px;
  color: transparent;
  text-shadow: 0 0 .5px white;
  padding: 10px;
}

.modal-background {
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   background: transparent;
   z-index: 10;
 }

.login-signup {
  color: white;
  list-style: none;
  display: flex;
  align-items: center;
  padding: 10px;
}


body {
  font-family: 'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;
  margin: 0px;
  padding: 0px;
  text-rendering: optimizeLegibility;
  height: 100%;
  /* text-shadow: 0 -.15px 0 rgb(220,	178,	140), .2px 0 0 rgb(117,	154,	192); */
}

input {
  border: 1px solid rgb(204,	204, 204);
  background-color: white;
  border-radius: 2px;
  box-shadow: inset 0px 1px 0px rgb(237,	237,	237);
  transition: border .5s ease-in-out;
  /* box-shadow: 0 0 1px black; */
}

.or {
  font-size: 14px;
  background: transparent;
  text-shadow: 0 -1px 0 rgb(55, 139, 112);
  padding: 10px;
}

.homepage-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  /* font-family: 'Lato','Helvetica Neue',Helvetica,Arial,sans-serif; */
  color: rgb(68,68,	68);

}

.homepage-header {
  font: inherit;
  font-weight: bold;
  font-size: 68px;
  display: block;
  margin: 20px;
  text-rendering: optimizeLegibility;
}

.homepage-body {
  font-size: 21px;
  /* text-shadow: 0 -.3px 0 yellow, .4px 0 0 lightblue; */
  /* text-shadow: 0 0 .2px lightblue; */

}


.homepage-get-started-button {
  /* color: white; */
  font-size: 28px;
  width: 334px;
  height: 85px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* border: 5px groove rgb(122, 162, 108)ck; */
  /* border-radius: 4px; */
  /* text-shadow: 0 -1px 0 rgb(198, 44,3); */
  padding: 5px 10px;
  /* box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2); */
  /* background-color: rgb(252,	95 ,49); */
  margin: 30px;
  text-align: center;
}

.homepage-get-started-button:hover {
  background-color: rgb(252,	74,	25);
}

.button-small-font {
  font-size: 14px;
  text-align: center;

}

.button-even-smaller-font{
  color: rgb(210,	146,	130);
  font-size: 7px;
  text-align: center;

}

.homepage-body {
}

strong {
  font-weight: bold;
}

